2006-02-14  Eric Anholt  <anholt@FreeBSD.org>

	* GL/mesa/shader/slang/Makefile.am:
	Avoid some more libcwrapper damage that prevented kdrive linking.

2006-02-14  Benjamin Herrenschmidt <benh@kernel.crashing.org>

	* hw/xfree86/dri/dri.c: (DRIGetSecs):
	DRIGetSecs() would call getsecs() when XFree86LOADER is defined,
	relying on the wrappers to provide it. Wrapper gone, and getsecs
	doesn't exist on linux so it now blows up. Fixes it by just calling
	gettimeofday() in all cases instead.

2006-02-14  Benjamin Herrenschmidt <benh@kernel.crashing.org>

	* fb/fbbits.h:
	Remove useless line of code that contained a bug and triggered a
	gcc warning. This variable will be overriden before being used
	anyway. (Bugzilla #5595)

2006-02-14  Alan Hourihane  <alanh@fairlite.demon.co.uk>

	* hw/xfree86/dixmods/shmodule.c:
	Bump shadow module version number to 1.1.0 from 1.0.0

2006-02-13  Adam Jackson  <ajax@freedesktop.org>

	* render/picture.c:
	Further op reduction when both src and dst alpha are absent.
	(Reverted)

2006-02-13  Benjamin Herrenschmidt <benh@kernel.crashing.org>

	* Xprint/Util.c: (XpOpenTmpFile):
	HAS_MKSTEMP vs. HAVE_MKSTEMP (From Fredrik Höglund)

2006-02-13  Benjamin Herrenschmidt <benh@kernel.crashing.org>

	* cfb/Makefile.am:
	* cfb16/Makefile.am:
	* cfb32/Makefile.am:
	* hw/xfree86/fbdevhw/fbdevhw.c:
	* hw/xfree86/os-support/linux/int10/linux.c:
	* hw/xfree86/os-support/linux/int10/vm86/linux_vm86.c:
	Fix linux build without libc wrappers (From Fredrik
	Höglund)

2006-02-13  Benjamin Herrenschmidt <benh@kernel.crashing.org>

	* hw/kdrive/src/kdrive.c: (ddxInitGlobals):
	* hw/vfb/InitOutput.c:
	* hw/xfree86/common/xf86Init.c: (OsVendorInit):
	* hw/xnest/Init.c:
	* os/osinit.c: (OsInit):
	Move call to xf86WrapperInit() to OsVendorInit() in xf86Init.c and
	remove stubs in other DDX.

2006-02-12  Eric Anholt  <anholt@FreeBSD.org>

	reviewed by: keithp (in principle)

	* render/picture.c: (ReduceCompositeOp), (CompositePicture):